fixed layout problem

--- a/css/posts.css
+++ b/css/posts.css
@@ -2,7 +2,7 @@
     padding: 40px 0 0 50px;
 }
 
-.content-sidebar-c {
+.content-sidebar-c-posts {
     background-image: url(/img/archive-photo.jpg);
     height: 400px;
     background-size: cover;
